overflow try fix

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,6 @@ h6,
         center center,
         center bottom;
     background-repeat: no-repeat;
-    background-size: contain;
 }
 
 @media (max-width: 991.98px) {
